--- a/The Sprawl/translations/ko.json
+++ b/The Sprawl/translations/ko.json
@@ -1,103 +1,103 @@
 {
-    "acquire-agri-property": "Acquire Agri Property",
-    "act-under-pressure": "Act Under Pressure",
-    "apply-first-aid": "Apply First Aid",
-    "armed": "Armed",
-    "assess": "Assess",
-    "avatar-img": "Avatar Img",
-    "body": "Body",
-    "broadcast": "Broadcast",
-    "character": "Character",
-    "contacts": "Contacts",
-    "cool": "Cool",
-    "cred": "Cred",
-    "crew-image": "crew image",
-    "crews": "Crews",
-    "cyberdeck": "Cyberdeck",
-    "cyberdeck-image": "cyberdeck image",
-    "cyberware": "Cyberware",
-    "cyberware-image": "cyberware image",
-    "design": "Design",
-    "details": "Details",
-    "dice": "Dice",
-    "directive": "Directive",
-    "directives": "Directives",
-    "disaster": "Disaster",
-    "drone-image": "drone image",
-    "drone-style": "Style",
-    "drones": "Drones",
-    "edge": "Edge",
-    "equipment": "Equipment",
-    "experience": "Experience",
-    "eyes": "Eyes",
-    "face": "Face",
-    "fast-talk": "Fast Talk",
-    "file-image": "file image",
-    "firewall": "Firewall",
-    "forward": "Forward",
-    "frame": "Frame",
-    "gang-image": "gang image",
-    "gangs": "Gangs",
-    "gangs-and-crews": "Gangs and Crews",
-    "gear-image": "gear image",
-    "hardening": "Hardening",
-    "harm": "Harm",
-    "harm-clock": "harm clock",
-    "harm-clock-t": "Harm Clock",
-    "harm-suffered": "Harm Suffered",
-    "hit-the-street": "Hit The Street",
-    "img-url": "Img Url",
-    "img-url-u": "IMG URL",
-    "intel-and-gear": "[Intel] &amp; [Gear]",
-    "leader": "Leader",
-    "links": "Links",
-    "looks": "Looks",
-    "main-gigs": "Main Gigs",
-    "meat": "Meat",
-    "mind": "Mind",
-    "mix-it-up": "Mix It Up",
-    "moves": "Moves",
-    "name": "Name",
-    "notes": "Notes",
-    "operator-file-u": "OPERATOR FILE",
-    "operator-name": "Operator name",
-    "other-equipment": "Other Equipment",
-    "play-hardball": "Play Hardball",
-    "playbook": "Playbook",
-    "processor": "Processor",
-    "product-id": "Product ID",
-    "profile": "Profile",
-    "profit": "Profit",
-    "program": "Program",
-    "programs-loaded": "Programs Loaded",
-    "programs-owned": "Programs Owned",
-    "research": "Research",
-    "roll-harm": "Roll Harm",
-    "rolls-cool": "Rolls Cool",
-    "rolls-edge": "Rolls Edge",
-    "rolls-harm": "Rolls Harm",
-    "rolls-links-with": "Rolls links with",
-    "rolls-mind": "Rolls Mind",
-    "rolls-style": "Rolls Style",
-    "rolls-synth": "Rolls Synth",
-    "sensors": "Sensors",
-    "size": "Size",
-    "skin": "Skin",
-    "stealth": "Stealth",
-    "strengths": "Strengths",
-    "style": "Style",
-    "synth": "Synth",
-    "tags": "Tags",
-    "territory": "Territory",
-    "time": "Time",
-    "type": "Type",
-    "use-cyberware": "Use Cyberware",
-    "user": "User",
-    "vehicle": "Vehicle",
-    "vehicle-image": "vehicle image",
-    "vehicles": "Vehicles",
-    "vehicles-and-drones": "Vehicles and Drones",
-    "weaknesses": "Weaknesses",
-    "weapons": "Weapons",
-    "wear": "Wear"
+	"acquire-agri-property": "고깃덩어리 챙기기",
+	"act-under-pressure": "위험 견디기",
+	"apply-first-aid": "응급처치",
+	"armed": "무기 장착",
+	"assess": "파악하기",
+	"avatar-img": "아바타 이미지",
+	"body": "몸",
+	"broadcast": "내보내기",
+	"character": "특징",
+	"contacts": "연줄",
+	"cool": "냉철",
+	"cred": "크레드",
+	"crew-image": "부하 이미지",
+	"crews": "부하",
+	"cyberdeck": "사이버덱",
+	"cyberdeck-image": "사이버덱 이미지",
+	"cyberware": "사이버웨어",
+	"cyberware-image": "사이버웨어 이미지",
+	"design": "용도",
+	"details": "세부사항",
+	"dice": "주사위",
+	"directive": "행동수칙",
+	"directives": "행동수칙",
+	"disaster": "재난",
+	"drone-image": "드론 이미지",
+	"drone-style": "드론 형식",
+	"drones": "드론",
+	"edge": "예리",
+	"equipment": "장비",
+	"experience": "경험치",
+	"eyes": "눈",
+	"face": "얼굴",
+	"fast-talk": "말재주 부리기",
+	"file-image": "파일 이미지",
+	"firewall": "방화벽",
+	"forward": "보너스",
+	"frame": "기본형",
+	"gang-image": "무리 이미지",
+	"gangs": "무리",
+	"gangs-and-crews": "무리와 부하",
+	"gear-image": "장비 이미지",
+	"hardening": "내구력",
+	"harm": "피해",
+	"harm-clock": "피해 시계",
+	"harm-clock-t": "피해 시계",
+	"harm-suffered": "입은 피해",
+	"hit-the-street": "거리 나서기",
+	"img-url": "이미지 URL",
+	"img-url-u": "이미지 URL",
+	"intel-and-gear": "[첩보] &amp; [장비]",
+	"leader": "지도자",
+	"links": "유대",
+	"looks": "외관",
+	"main-gigs": "주요 분야",
+	"meat": "육체",
+	"mind": "정신",
+	"mix-it-up": "한판 붙기",
+	"moves": "액션",
+	"name": "이름",
+	"notes": "설명",
+	"operator-file-u": "요원 파일",
+	"operator-name": "요원 이름",
+	"other-equipment": "다른 장비",
+	"play-hardball": "세게 나가기",
+	"playbook": "플레이북",
+	"processor": "처리속도",
+	"product-id": "제품 ID",
+	"profile": "프로필",
+	"profit": "이득",
+	"program": "프로그램",
+	"programs-loaded": "실행 프로그램",
+	"programs-owned": "소유 프로그램",
+	"research": "조사하기",
+	"roll-harm": "피해 판정",
+	"rolls-cool": "냉철 판정",
+	"rolls-edge": "예리 판정",
+	"rolls-harm": "피해 판정",
+	"rolls-links-with": "유대 판정",
+	"rolls-mind": "정신 판정",
+	"rolls-style": "스타일 판정",
+	"rolls-synth": "신스 판정",
+	"sensors": "감지기",
+	"size": "규모",
+	"skin": "피부",
+	"stealth": "은신",
+	"strengths": "강점",
+	"style": "스타일",
+	"synth": "신스",
+	"tags": "태그",
+	"territory": "지배 영역",
+	"time": "시간",
+	"type": "일거리",
+	"use-cyberware": "사이버웨어 사용",
+	"user": "사용자",
+	"vehicle": "차량",
+	"vehicle-image": "차량 이미지",
+	"vehicles": "차량",
+	"vehicles-and-drones": "차량과 드론",
+	"weaknesses": "약점",
+	"weapons": "무기",
+	"wear": "옷"
 }
